tests/sumo/tls/errors/add_attribute_next_invalid/errors.sumo
Error: Invalid nextPhase 14 in tlLogic 'C', program 'custom' with 12 phases
Quitting (on error).
